--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch01.html">&lt;</a><a class="following" href="punr_ch03.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
@@ -57,6 +57,40 @@
          <article>
             <details>
                <summary>Introduction</summary>
+               <p>Initialement publié en 1956 dans le numéros 43 de la Nouvelle Revue Française et enrichi
+                  des articles «&nbsp;Réalisme et révolution&nbsp;» et «&nbsp;Pour un réalisme de la présence&nbsp;» publié
+                  dans L'Express en janvier 1955 et en janvier 1956 respectivement, cet article constitue
+                  sans doute l'une des charges les plus violentes adressés aux contemporains de Robbe-Grillet
+                  au sein du recueil.</p>
+               <p>Plus encore c'est sans doute dans ce texte que l'on mesure l'habileté (ou la mauvaise
+                  foi) de Robbe-Grillet en sa capacité à se mettre à la place de ses adversaires, qui
+                  dès lors ne peuvent que sembler des adversaires supposés, imaginaires, les personnages
+                  d'un roman.</p>
+               <p>L'auteur se montre à leur égard tantôt moqueur «&nbsp;Mais tous avouent, sans voir là rien
+                  d'anormal, que leurs préoccupations d'écrivains datent de plusieurs siècles&nbsp;», compréhensif
+                  «&nbsp;Comment feraient-elles [les choses] pour changer ? Vers quoi iraient-elles ?&nbsp;» enfin
+                  pédagogue «&nbsp;Or le monde n'est ni signifiant ni absurde. Il est, tout simplement.&nbsp;».</p>
+               <p>Cette variété de ton, si elle sert la démonstration, doit aussi être perçue comme
+                  les traces de l'assemblage qui produisit l'article en cette forme. [justifier voir
+                  GALIA]</p>
+               <p>Au demeurant, le glissement à un ton plus théorique que polémique sert ici aussi l'économie
+                  globale du recueil. Par son titre et son sujet apparent : l'avenir du roman, cet article
+                  semble programmatique. Loin de délivrer des propos abstraits sur l'avenir du roman,
+                  ce texte s'avère être un état des lieux de la littérature contemporaine, tenant deux
+                  pants de la littérature contemporaine, les héritiers de Balzac, du côté des consommateurs,
+                  de ceux qui croit au «&nbsp;cœur&nbsp;» humain éternel et de la littérature telle qu'elle est,
+                  en opposition à la littérature telle qu'elle pourrait être, les littérature acceptant
+                  le risque de jouïr pleineemnt de leur liberté d'écrivain pour écrire une littérature
+                  plus proche de la réalité.</p>
+               <p>Est introduit dans ce chapitre surtout un hiatus entre l'importance de ces deux littératures
+                  et leur degré de contemporanéité. Alors que la littérature dominnante repose sur des
+                  idées au mieux de plusieurs siècle, au pire proprement délirante (coeur romantique
+                  des choses)&nbsp;; une littérature consciente du temps présent et de sa responsabilité
+                  à résister contre l'appropriation systématique&nbsp;» a toute les difficultés à exister.</p>
+               <p>Si ce texte semble dérouler toutes les raisons psychologiques (chez les lecteurs,
+                  les auteurs, les critiques) etc. qui empêche à cette littérature nouvelle de prendre
+                  la place qui lui est dûe, c'est bien un paradoxe qu'expose en creux Robbe-Grillet
+                  invitant le lecteur à se positionner pour ce langage littérautre qui «&nbsp;déjà change&nbsp;».</p>
             </details>
             <div class="smallgap"></div>
             <h3 id="d1e508"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
@@ -248,7 +282,7 @@
                le chemin difficile d’un nouvel art romanesque.</p>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
