--- a/04_livrable/website/punr/punr_ch05.html
+++ b/04_livrable/website/punr/punr_ch05.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch04.html">&lt;</a><a class="following" href="punr_ch06.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
@@ -57,14 +57,27 @@
          <article>
             <details>
                <summary>Introduction</summary>
+               <p>Les écrits théorique s'interrompent et s'intercalent un texte inédit ayant vocation
+                  de seuil. Aux récriminations contre une littérature périmées, aux recommendations
+                  techniques succèdent les cas pratiques&nbsp;: nous sommes invités à lire la modernité à
+                  travers les lectures de Robbe-Grillet.</p>
+               <p>À la filiation prestigieuse (car constituée de classique relativement éloignés) se
+                  surimpose une filiation à la fois plus contemporaine et moins connus du grand public.</p>
+               <p>À travers ces critiques, Robbe-Grillet défend deux pendants de la modernité : des
+                  techniques et une certaine attitude qu'il préconise à l'endroit des œuvres littéraire.
+                  Que devrait-on lire ? Comment devrait-on lire ?</p>
+               <p>Si l'on ne pourrait affirmer avec certitude que Robbe-grillet défend l'idée d'un progrès
+                  en art, on observe du moins une gradation dans l'ordre de ces chroniques&nbsp;: plutôt
+                  que d'être insérées dans leur ordre de publication ces critiques sont organisés de
+                  la plus éloignée à la plus proche de la modernité.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2144"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
+            <h3 id="d1e2250"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
             <p class="first">Les quelques œuvres qui vont être rapidement analysées, ou commentées, dans les pages
                qui suivent sont loin d’être les seules à avoir marqué de leurs recherches la littérature
                de cette première moitié du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle. Ce ne sont même pas toujours celles qui m’auront personnellement le plus
-               impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
-               pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a des côtés très démodés, et que <span class="STDitalic">Godot</span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
+               impressionné. On remarquera tout de suite l’absence, entre autres, de <span class="ref">Kafka<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>, et la présence au contraire d’écrivains de bien moindre importance. On ne manquera
+               pas de dire aussi que <span class="ref">Joë&nbsp;Bousquet<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> a des côtés très démodés, et que <span class="ref">Godot<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> est trop à la mode, et que souvent ce ne sont pas les ouvrages les plus accomplis
                qui ont été choisis pour représenter les auteurs retenus.</p>
             <p>Tout cela est vrai. C’est que les cinq brefs essais reproduits ici seront pour moi
                surtout des exemples, qui me permettront chacun de préciser quelques thèmes et formes
@@ -74,7 +87,7 @@
                serait pas difficile de retrouver dans la plupart des recherches contemporaines.</p>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
