--- a/04_livrable/website/punr/punr_ch06.html
+++ b/04_livrable/website/punr/punr_ch06.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch05.html">&lt;</a><a class="following" href="punr_ch07.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
@@ -57,12 +57,20 @@
          <article>
             <details>
                <summary>Introduction</summary>
+               <p>Publiée en décembre 1963 dans la revue Critique, cette analyse du style de Raymond
+                  Roussel semble partir du constat que Raymond Roussel écrit «&nbsp;mal&nbsp;» c'est-à-dire qu'il
+                  ne répond pas aux habitudes de la réception. En effet, il ne s'agit pas d'une littérature
+                  du secret, ni même du dévoilement mais une littérature d'un imaginaire loufoque décrit
+                  avec la banalité de ce qui n'est que pour être. En cela ce cas pratique est à la fois
+                  une démonstration de la modernité selon Robbe-Grillet mais également de l'incapacité
+                  du discours de la critique contemporaine à rendre compte du fait littéraire, même
+                  relativement ancien.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2173">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
-            <p class="first"><span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
+            <h3 id="d1e2280">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
+            <p class="first"><span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
                s’appeler un message. Pour reprendre une des expressions favorites de la critique
-               littéraire académique, <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
+               littéraire académique, <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
                d’objets, de gestes et d’événements qui constituent, dès la première vue, son univers.</p>
             <p>Il arrive que, pour les besoins d’une ligne descriptive très stricte, il ait à nous
                conter quelque anecdote psychologique, ou bien quelque coutume religieuse imaginaire,
@@ -74,8 +82,8 @@
                toujours <span id="page_87" class="STDgray STDsmall pb">[87]</span>traités à la manière des images d’Épinal), ou bien de rites <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
                le sens épuisé il ne reste encore une fois que les choses elles-mêmes, objets, gestes,
                etc.</p>
-            <p>Sur le plan du langage, <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
-               et bien entendu pour s’en plaindre&nbsp;: <span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
+            <p>Sur le plan du langage, <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
+               et bien entendu pour s’en plaindre&nbsp;: <span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
                de la platitude avouée&nbsp;: le domaine du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;il y a&nbsp;»</span> et du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;se trouve placé à une certaine distance&nbsp;»</span>&nbsp;–, c’est toujours pour tomber dans l’image banale, dans la métaphore la plus rebattue,
                sortie elle aussi de quelque arsenal des conventions littéraires. Enfin l’organisation
                sonore des phrases, le rythme des mots, leur musique ne semblent poser pour l’auteur
@@ -84,7 +92,7 @@
                enchevêtrements cacophoniques, des vers où il faut compter sur ses doigts pour s’apercevoir
                que les alexandrins ont vraiment douze pieds.</p>
             <p>Nous voici donc en présence de l’envers parfait de ce qu’il est convenu d’appeler
-               un bon écrivain&nbsp;: <span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> n’a rien à dire et il le dit mal... Et pourtant son œuvre commence à être reconnue
+               un bon écrivain&nbsp;: <span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> n’a rien à dire et il le dit mal... Et pourtant son œuvre commence à être reconnue
                par tous comme l’une des plus importantes de la littérature française au début de
                ce siècle, une de celles qui ont exercé leur fascination sur plusieurs générations
                d’écrivains et d’artistes, une de celles, sans aucun doute, que l’on doit compter
@@ -145,7 +153,7 @@
                un chemin logique qui conduit d’un état donné à un autre état –&nbsp;ressemblant beaucoup
                au premier, bien qu’il soit atteint par un long détour. On en trouve un nouvel exemple&nbsp;–&nbsp;et
                qui a l’avantage supplémentaire de se <span id="page_92" class="STDgray STDsmall pb">[92]</span>situer entièrement dans le domaine du langage&nbsp;–&nbsp;avec les courts récits posthumes dont
-               <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a lui-même expliqué l’architecture&nbsp;: deux phrases qui se prononcent de façon identique,
+               <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> a lui-même expliqué l’architecture&nbsp;: deux phrases qui se prononcent de façon identique,
                à une lettre près, mais dont les sens sont totalement sans rapport, à cause des acceptions
                différentes dans lesquelles sont pris les mots semblables. Le trajet, c’est ici l’histoire,
                l’anecdote, permettant de réunir les deux phrases, qui constitueront, l’une les premiers
@@ -153,7 +161,7 @@
                par leur fonction d’ustensiles, de véhicules, d’intermédiaires&nbsp;; l’anecdote n’a ouvertement
                plus de contenu, mais un mouvement, un ordre, une composition&nbsp;; elle n’est plus, elle
                aussi, qu’une mécanique&nbsp;: à la fois machine à reproduire et machine à modifier.</p>
-            <p>Car il faut insister sur l’importance que <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
+            <p>Car il faut insister sur l’importance que <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
                sens. Le récit a opéré sous nos yeux, d’une part un changement profond de ce que signifie
                le monde&nbsp;–&nbsp;et le langage&nbsp;–, d’autre part un infime décalage superficiel (la lettre
                altérée)&nbsp;; le texte <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;se mord la queue&nbsp;»</span>, mais avec une petite irrégularité, une petite entorse... et qui change tout.</p>
@@ -169,8 +177,8 @@
                baie passe une route&nbsp;; et sur cette route roule une voiture, et un homme est assis
                à l’intérieur de la voiture&nbsp;; cet homme tient une canne, dont le pommeau représente...,
                etc.</p>
-            <p>La <span class="STDitalic">vue,</span> sens privilégié chez <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, atteint très vite une acuité démentielle, tendant vers l’infini. Ce caractère est
-               rendu sans doute encore plus provocant du fait qu’il s’agit d’une reproduction. <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> décrit volontiers, nous l’avons signalé, un univers qui n’est pas donné comme réel,
+            <p>La <span class="STDitalic">vue,</span> sens privilégié chez <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>, atteint très vite une acuité démentielle, tendant vers l’infini. Ce caractère est
+               rendu sans doute encore plus provocant du fait qu’il s’agit d’une reproduction. <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> décrit volontiers, nous l’avons signalé, un univers qui n’est pas donné comme réel,
                mais comme déjà représenté. Il aime placer un artiste intermédiaire entre lui-même
                et le monde des hommes. Le texte que l’on nous propose est une relation concernant
                un double. Le grossissement démesuré de certains éléments lointains ou minuscules
@@ -196,7 +204,7 @@
                qui s’incline, et l’écume de la vague immobile va retomber...</p>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
