--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch09.html">&lt;</a><a class="following" href="punr_ch11.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
@@ -57,14 +57,34 @@
          <article>
             <details>
                <summary>Introduction</summary>
+               <p>Dans cet article, initialement paru dansXXXX enXXX, Robbe-Grillet fait la critique
+                  de deux romans de Robert Pinget (auteur rattaché au NR XXXRICARDOU?XXX) Mahu ou le
+                  matériau et Le Renard et la boussole paru en 1952 et 1953 respectivement. Robbe-Grillet
+                  s'y emploie à résumer l'intrigue autant que faire ce peut (le terme même d'«&nbsp;intrigue&nbsp;»
+                  semble ici inaproprié). Ce résumé vaut commentaire tant l'explicitation des détours
+                  de ces œuvres ne peut être que le récit d'une écriture.</p>
+               <p>Si, comme l'ensemble des critiques au sein de Pour un nouveau roman, le texte semble
+                  une digression dans l'économie de la démonstration, cette digression elle-même puisqu'elle
+                  est assemblée au recueil vaut d'emblée aux yeux du lecteur illustration des thèses.</p>
+               <p>Que nous démontre la lecture de Pinget que nous livre Robbe-Grillet ? Robbe-Grillet
+                  ne tire aucune conclusion dans cet article, cependant la relative inanité de l'exercice
+                  auquel il se livre ici, dénouer le fil de l'aventure, semble la meilleure incarnation
+                  possible des thèses exposées dans « De quelques notions périmées » : son analyse du
+                  personnage de Renard, le récit insaisiçable se veulent les preuves que le discours
+                  habituel de la critique n'a pas prise sur les œuvres du nouveau roman (et peut-être
+                  Robbe-Grillet non plus). Enfin il convient de souligner que l'article souvre sur l'assertion
+                  initiale déplorant le fait que les œuvres de Pinget passe inaperçu. Outre le fait
+                  que cette affirmation semble corroborer les propos que Robbe-Grillet tient également
+                  dans «XXX», il n'est sans doute pas anodin que l'éditeur Robbe-Grillet publie à propos
+                  de Pinget publié chez Minuit.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3632">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <h3 id="d1e3739">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
             <p class="first"><span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
                   merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
                des spécialistes, noyés par profession dans le flot quotidien des récits linéaires,
-               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('unknown1','2','9',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
+               et réussis&nbsp;– alors que ces livres (ceux de <span class="ref">Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>), apparemment <span class="STDitalic">sans queue ni tête,</span> sont peut-être déjà précisément les <span class="quote" onclick="displayExtract('toDefine','2','9',1);">«&nbsp;extraordinaires merveilles&nbsp;»</span> annoncées.</p>
             <p>Il faut bien tenter d’en retracer, sinon les anecdotes –&nbsp;qui se nouent et se dissolvent
                à chaque page dans des contradictions, des variantes et des sauts périlleux où l’on
                retombe moins souvent sur les pieds que sur la tête&nbsp;–&nbsp;du moins le <span class="STDitalic">mouvement</span> qui, s’il est quelquefois difficile à saisir au milieu de ce sabotage permanent,
@@ -137,7 +157,7 @@
                <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> a encore <span class="quote" onclick="displayExtract('pr_01_184','2','0',1);">«&nbsp;gagné&nbsp;»</span>.</p>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
