--- a/04_livrable/website/punr/punr_ch12.html
+++ b/04_livrable/website/punr/punr_ch12.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch11.html">&lt;</a><a class="following" href="punr_ch13.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
@@ -59,7 +59,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e4031"><span id="page_154" class="STDgray STDsmall pb">[154]</span>Temps et description dans le récit d’aujourd’hui<br><span class="STDsmall">(1963)</span></h3>
+            <h3 id="d1e4138"><span id="page_154" class="STDgray STDsmall pb">[154]</span>Temps et description dans le récit d’aujourd’hui<br><span class="STDsmall">(1963)</span></h3>
             <p class="first">La critique est une chose difficile, bien plus que l’art, en un sens. Alors que le
                romancier, par exemple, peut se fier à sa seule sensibilité, sans toujours essayer
                d’en comprendre les choix, et que le simple lecteur se contente de savoir s’il est
@@ -325,7 +325,7 @@
                tour l’œuvre&nbsp;–&nbsp;et le monde&nbsp;–&nbsp;et d’apprendre ainsi à inventer sa propre vie.</p>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
