--- a/04_livrable/website/punr/punr_ch13.html
+++ b/04_livrable/website/punr/punr_ch13.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch12.html">&lt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
@@ -59,7 +59,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e4259"><span id="page_170" class="STDgray STDsmall pb">[170]</span>Du réalisme à la réalité<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
+            <h3 id="d1e4366"><span id="page_170" class="STDgray STDsmall pb">[170]</span>Du réalisme à la réalité<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
             <p class="first">Tous les écrivains pensent être réalistes. Aucun jamais ne se prétend abstrait, illusionniste,
                chimérique, fantaisiste, faussaire... Le réalisme n’est pas une théorie, définie sans
                ambiguïté, qui permettrait d’opposer certains romanciers aux autres&nbsp;; c’est au contraire
@@ -276,12 +276,11 @@
                vont simplement être absorbées par le roman <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;éternel&nbsp;»</span> et vont servir à perfectionner quelque détail du personnage balzacien, de l’intrigue
                chronologique et de l’humanisme transcendant.</p>
             <p>Il est possible que ce jour vienne en effet, et même assez vite. Mais dès que le Nouveau
-               Roman commencera à <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;servir à quelque chose&nbsp;»</span>, que ce soit à l’analyse psychologique, au roman catholique ou au réalisme socialiste,
-               ce sera le signal pour les inventeurs qu’un Nouveau Nouveau Roman demande à voir le
-               jour, dont on ne saurait pas encore à quoi il pourrait servir&nbsp;–&nbsp;sinon à la littérature.</p>
+               Roman commencera à <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;servir à quelque chose&nbsp;»</span>, que ce soit à l’analyse psychologique, au roman catholique ou au <span class="ref">réalisme socialiste<span class="refinfo">courant, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, ce sera le signal pour les inventeurs qu’un Nouveau Nouveau Roman demande à voir
+               le jour, dont on ne saurait pas encore à quoi il pourrait servir&nbsp;–&nbsp;sinon à la littérature.</p>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
