--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,6 +49,7 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <article class="index">
          <section class="intro">intro goes here</section>
          <section class="index bad">
@@ -80,6 +80,87 @@
                <li>«&nbsp;condition&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_26">26</a>]</span></li>
                <li>«&nbsp;nature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_26">26</a>]</span></li>
                <li>«&nbsp;au-delà&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_26">26</a>]</span></li>
+               <li>«&nbsp;naturels&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;personnage&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;atmosphère&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;forme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;contenu&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;message&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;talent de conteur&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;vrais romanciers&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;nature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_28">28</a>]</span></li>
+               <li>«&nbsp;avant-garde&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_29">29</a>]</span></li>
+               <li>«&nbsp;avant-garde&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_29">29</a>]</span></li>
+               <li>«&nbsp;avant-garde&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_29">29</a>]</span></li>
+               <li>«&nbsp;laboratoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_30">30</a>]</span></li>
+               <li>«&nbsp;anti-roman&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_30">30</a>]</span></li>
+               <li>«&nbsp;personnage&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_30">30</a>]</span></li>
+               <li>«&nbsp;vrai&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_30">30</a>]</span></li>
+               <li>«&nbsp;il crée des personnages&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_30">30</a>]</span></li>
+               <li>«&nbsp;caractère&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_30">30</a>]</span></li>
+               <li>«&nbsp;l’humain&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_32">32</a>]</span></li>
+               <li>«&nbsp;histoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_33">33</a>]</span></li>
+               <li>«&nbsp;raconter une histoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_33">33</a>]</span></li>
+               <li>«&nbsp;raconter des histoires&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_34">34</a>]</span></li>
+               <li>«&nbsp;tranche de vie&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_35">35</a>]</span></li>
+               <li>«&nbsp;naturel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_35">35</a>]</span></li>
+               <li>«&nbsp;action&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_37">37</a>]</span></li>
+               <li>«&nbsp;Voyez, diront-ils, comme, dans les années cinquante, on savait inventer des histoires&nbsp;!&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_38">38</a>]</span></li>
+               <li>«&nbsp;l’engagement&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_39">39</a>]</span></li>
+               <li>«&nbsp;décadence&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_40">40</a>]</span></li>
+               <li>«&nbsp;gratuité&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_40">40</a>]</span></li>
+               <li>«&nbsp;formalisme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_40">40</a>]</span></li>
+               <li>«&nbsp;l’art pour l’art&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_42">42</a>]</span></li>
+               <li>«&nbsp;valeurs&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_43">43</a>]</span></li>
+               <li>«&nbsp;au-delà&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_43">43</a>]</span></li>
+               <li>«&nbsp;bourgeoise&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_45">45</a>]</span></li>
+               <li>«&nbsp;de laboratoire&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_45">45</a>]</span></li>
+               <li>«&nbsp;forme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_46">46</a>]</span></li>
+               <li>«&nbsp;contenu&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_46">46</a>]</span></li>
+               <li>«&nbsp;grand&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_46">46</a>]</span></li>
+               <li>«&nbsp;formalisme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_47">47</a>]</span></li>
+               <li>«&nbsp;signification profonde&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_48">48</a>]</span></li>
+               <li>«&nbsp;engagés&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_49">49</a>]</span></li>
+               <li>«&nbsp;responsable&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_49">49</a>]</span></li>
+               <li>«&nbsp;message&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_50">50</a>]</span></li>
+               <li>«&nbsp;Untel a quelque chose à dire et il le dit bien.&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_50">50</a>]</span></li>
+               <li>«&nbsp;gratuité&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_50">50</a>]</span></li>
+               <li>«&nbsp;formalisme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_51">51</a>]</span></li>
+               <li>«&nbsp;contenu&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_51">51</a>]</span></li>
+               <li>«&nbsp;surfaces&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_55">55</a>]</span></li>
+               <li>«&nbsp;valeurs&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_55">55</a>]</span></li>
+               <li>«&nbsp;naturel&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_55">55</a>]</span></li>
+               <li>«&nbsp;humain&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_55">55</a>]</span></li>
+               <li>«&nbsp;inhumaine&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_57">57</a>]</span></li>
+               <li>«&nbsp;personnage&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_57">57</a>]</span></li>
+               <li>«&nbsp;capricieux&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_58">58</a>]</span></li>
+               <li>«&nbsp;majestueuse&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_58">58</a>]</span></li>
+               <li>«&nbsp;cœur&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_58">58</a>]</span></li>
+               <li>«&nbsp;impitoyable&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_58">58</a>]</span></li>
+               <li>«&nbsp;blotti&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_58">58</a>]</span></li>
+               <li>«&nbsp;blotti&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_59">59</a>]</span></li>
+               <li>«&nbsp;se blottir&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_60">60</a>]</span></li>
+               <li>«&nbsp;majesté&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_60">60</a>]</span></li>
+               <li>réalité profonde<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_61">61</a>]</span></li>
+               <li>nature<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_62">62</a>]</span></li>
+               <li>«&nbsp;création&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_62">62</a>]</span></li>
+               <li>«&nbsp;nature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_63">63</a>]</span></li>
+               <li>«&nbsp;galop&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_63">63</a>]</span></li>
+               <li>«&nbsp;crinière échevelée&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_63">63</a>]</span></li>
+               <li>«&nbsp;lance des flèches&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_63">63</a>]</span></li>
+               <li>des<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_64">64</a>]</span></li>
+               <li>des<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_64">64</a>]</span></li>
+               <li>pourra,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_64">64</a>]</span></li>
+               <li>tragédie<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_65">65</a>]</span></li>
+               <li>douloureuse,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_65">65</a>]</span></li>
+               <li>envers,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_65">65</a>]</span></li>
+               <li>«&nbsp;solitude&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_66">66</a>]</span></li>
+               <li>«&nbsp;pont d’âme&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>«&nbsp;romanesque&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>«&nbsp;personnage&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>«&nbsp;humaine&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>«&nbsp;nature&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>«&nbsp;tragique&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_69">69</a>]</span></li>
             </ul>
          </section>
          <section class="index">
@@ -97,6 +178,46 @@
                <li>quelque chose<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_22">22</a>]</span></li>
                <li>ailleurs<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_23">23</a>]</span></li>
                <li>vrai.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch02.html#page_24">24</a>]</span></li>
+               <li>pour rien<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_41">41</a>]</span></li>
+               <li>la plus importante au monde.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_42">42</a>]</span></li>
+               <li>ce qu’ils sont.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_43">43</a>]</span></li>
+               <li>écriture <span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_46">46</a>]</span></li>
+               <li>est,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_48">48</a>]</span></li>
+               <li>nécessité,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_50">50</a>]</span></li>
+               <li>pour rien&nbsp;;<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_51">51</a>]</span></li>
+               <li>aliénation<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_51">51</a>]</span></li>
+               <li>tout<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_56">56</a>]</span></li>
+               <li>humain<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_56">56</a>]</span></li>
+               <li>signification,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_57">57</a>]</span></li>
+               <li>humaniste,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_58">58</a>]</span></li>
+               <li>«&nbsp;situé&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_59">59</a>]</span></li>
+               <li>«&nbsp;blotti&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_59">59</a>]</span></li>
+               <li>extérieur.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_60">60</a>]</span></li>
+               <li>avant <span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_62">62</a>]</span></li>
+               <li>lui<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_62">62</a>]</span></li>
+               <li>déjà <span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_62">62</a>]</span></li>
+               <li>«&nbsp;pananthropique&nbsp;»<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_63">63</a>]</span></li>
+               <li>supérieure.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_64">64</a>]</span></li>
+               <li>seule question <span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_64">64</a>]</span></li>
+               <li>vrai<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_66">66</a>]</span></li>
+               <li>distance intérieure,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>double.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>équivoque.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>d’abord<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_68">68</a>]</span></li>
+               <li>étrangeté.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_69">69</a>]</span></li>
+               <li>lavé<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_69">69</a>]</span></li>
+               <li>pour des raisons morales<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_69">69</a>]</span></li>
+               <li>vit<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_73">73</a>]</span></li>
+               <li>comme lui-même.<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_73">73</a>]</span></li>
+               <li>pour <span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_76">76</a>]</span></li>
+               <li>avec<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_76">76</a>]</span></li>
+               <li>cœur,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_76">76</a>]</span></li>
+               <li>réflexion,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_76">76</a>]</span></li>
+               <li>n’étant pas l’homme,<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_77">77</a>]</span></li>
+               <li>intérieur<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
+               <li>dans<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
+               <li>connaissance<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_78">78</a>]</span></li>
+               <li>en face<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch04.html#page_79">79</a>]</span></li>
             </ul>
          </section>
       </article>
