--- a/04_livrable/website/punr/punr_ch11.html
+++ b/04_livrable/website/punr/punr_ch11.html
@@ -10,7 +10,6 @@
       <meta name="description" content="digital critical edition of pour un nouveau roman by alain robbe-grillet fist published in 1963 this word has been realised as student project">
       <meta name="keywords" content="critical, edition, digital, robbe-grillet, litterature, french, 1963, nouveau roman, alain robbe-grillet, pour un nouveau roman, xxe siecle, xx, french theory">
    </head>
-   <div class="STDtop">&lt;</div>
    <body onload="initialise()">
       <header id="top">
          <h1><span class="STD_italic">Pour un nouveau roman</span><br><span class="h1_subtitle">Édition critque et numérique</span></h1>
@@ -50,20 +49,21 @@
             <div class="legals"><a href="https://github.com/mevel-a/ednitl_m2_memoire" target="blanck" style="grid-column:1;"><img src="img/GitHub-Mark-32px.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:2;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_cc.png"></a><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="blanck" style="grid-column:3;"><img alt="Licence Creative Commons" src="https://creativecommons.org/images/chooser/chooser_by.png"></a><a href="files/punr.xml" download="" style="grid-column:3; grid-row:2;"><img src="img/logo_xml.png" alt="XML"></a><button class="darkbutton" onclick="darkmode();" style="grid-column:1; grid-row:2;"><img src="img/sun_icon.png" class="sun"></button></div>
          </div>
       </header>
+      <div class="STDtop"><a href="#top">&lt;</a></div>
       <div class="ch_nav"><a class="preceding" href="punr_ch10.html">&lt;</a><a class="following" href="punr_ch12.html">&gt;</a></div>
       <div class="corpus">
          <div class="articlenavs">
             <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button><h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e3805">Nouveau roman, homme nouveau</a></li>
+               <li><a href="#d1e3912">Nouveau roman, homme nouveau</a></li>
                <ol>
-                  <li><a href="#d1e3826">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
-                  <li><a href="#d1e3862">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
-                  <li><a href="#d1e3925">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
-                  <li><a href="#d1e3949">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
-                  <li><a href="#d1e3978">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
-                  <li><a href="#d1e3993">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
-                  <li><a href="#d1e4011">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
+                  <li><a href="#d1e3933">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
+                  <li><a href="#d1e3969">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
+                  <li><a href="#d1e4032">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
+                  <li><a href="#d1e4056">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
+                  <li><a href="#d1e4085">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
+                  <li><a href="#d1e4100">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
+                  <li><a href="#d1e4118">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
                </ol>
             </ul>
          </div>
@@ -72,7 +72,7 @@
                <summary>Introduction</summary>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3805"><span id="page_142" class="STDgray STDsmall pb">[142]</span>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
+            <h3 id="d1e3912"><span id="page_142" class="STDgray STDsmall pb">[142]</span>Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
             <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
                et aussi, souvent, parmi les éloges, il y avait tant de simplifications extrêmes,
                tant d’erreurs, tant de malentendus, qu’une sorte de mythe monstrueux a fini par se
@@ -99,7 +99,7 @@
                qu’il serait plus raisonnable de dire&nbsp;:</p>
             <div class="smallgap"></div>
             <div id="" type="subsection">
-               <h4 id="d1e3826">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
+               <h4 id="d1e3933">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
                <div class="smallgap"></div>
                <p>Il n’a donc codifié aucune loi. Ce qui fait qu’il ne s’agit pas d’une école littéraire
                   au sens étroit du terme. Nous sommes les premiers à savoir qu’il y a entre nos œuvres
@@ -127,11 +127,11 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3862">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
+               <h4 id="d1e3969">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
                <div class="smallgap"></div>
                <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
                   définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
-               <p>Et, depuis, l’évolution n’a cessé de s’accentuer&nbsp;: <span class="ref">Flaubert<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Dostoïevsky<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Proust<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Kafka<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Joyce<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Faulkner<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Beckett<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>... Loin de faire table rase du passé, c’est sur les noms de nos prédécesseurs que
+               <p>Et, depuis, l’évolution n’a cessé de s’accentuer&nbsp;: <span class="ref">Flaubert<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Dostoïevsky<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Proust<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Kafka<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Joyce<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Faulkner<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>, <span class="ref">Beckett<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>... Loin de faire table rase du passé, c’est sur les noms de nos prédécesseurs que
                   nous nous sommes le plus aisément mis d’accord&nbsp;; et notre ambition est seulement de
                   les continuer. Non pas de faire mieux, ce qui n’a aucun sens, mais de nous placer
                   à leur suite, maintenant, à notre heure.</p>
@@ -149,7 +149,7 @@
                   et des vieilles normes.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3925">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
+               <h4 id="d1e4032">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
                <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
                   pas d’hommes du tout. C’était bien mal les lire. L’homme y est présent à chaque page,
                   à chaque ligne, à chaque mot. Même si l’on y trouve beaucoup d’objets, et décrits
@@ -174,7 +174,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3949">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
+               <h4 id="d1e4056">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
                <div class="smallgap"></div>
                <p>Comme il y avait beaucoup d’objets dans nos livres, et qu’on leur trouvait quelque
                   chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
@@ -197,7 +197,7 @@
                   idées toutes faites, en littérature comme dans la vie.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3978">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
+               <h4 id="d1e4085">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
                <div class="smallgap"></div>
                <p>Car il s’agit ici d’expérience vécue, et non des schémas rassurants&nbsp;–&nbsp;et désespérants
                   tout à la fois&nbsp;–&nbsp;qui tentent de limiter les dégâts et d’assigner un ordre conventionnel
@@ -218,7 +218,7 @@
                   de leur existence, les aideront à y voir plus clair.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3993">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
+               <h4 id="d1e4100">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
                <div class="smallgap"></div>
                <p>Et l’on arrive à la grande question&nbsp;: notre vie a-t-elle un sens&nbsp;? Quel est-il&nbsp;? Quelle
                   est la place de l’homme sur la terre&nbsp;? On voit tout de suite pourquoi les objets balzaciens
@@ -248,7 +248,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e4011">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
+               <h4 id="d1e4118">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
                <div class="smallgap"></div>
                <p>Il n’est pas raisonnable, dès lors, de prétendre dans nos romans servir une cause
                   politique, même une cause qui nous paraît juste, même si dans notre vie politique
@@ -264,7 +264,7 @@
             </div>
          </article>
          <section class="extract_section">
-            <div id="unknown_0" class="extractHide">
+            <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Le passage cité n'a pas pu être identifié.</p>
                <p class="editor"><span class="STDitalic"></span>.</p>
